--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -111,7 +111,7 @@
         header{
             
             display: block;
-            width: 100%;
+           /* width: 100%;*/
         }
          .nav{
             text-align: center;
@@ -133,11 +133,11 @@
         }
         .col-3{
             width: 90%;
-            
+            font-size: 12px;
         }
         .col-7{
             width: 90%;
-            
+            font-size: 12px;
         }
          
         img{
