--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -111,7 +111,8 @@
         header{
             
             display: block;
-           /* width: 100%;*/
+           padding-left: 20px;
+           padding-right: 20px;
         }
          .nav{
             text-align: center;
