--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -131,12 +131,10 @@
         }
         .col-3{
             width: 100%;
-            font-size: 8px;
-        }
+            }
         .col-7{
             width: 100%;
-            font-size: 8px;
-        }
+            }
          
         img{
             width: fit-content;
@@ -150,6 +148,9 @@
          .footer{
             width: 100%;
             display: block;
+         }
+         p{
+            font-size: 8px;
          }
      }
       
