--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -144,6 +144,9 @@
             width: 100%;
             display: block;
          }
+         p{
+            font-size: 6px;
+         }
          
      }
       
