--- a/TapijtvanVlaardingen/css/style.css
+++ b/TapijtvanVlaardingen/css/style.css
@@ -238,22 +238,25 @@ td, th{
 
   }
   .verdelingen{
+    width: 90%;
     vertical-align: middle;
-    margin: none;
+    margin: 1rem;
     float: left;
   }
   .verdeling{
+    width: 90%;
      vertical-align: middle;
-     margin: none;
+     margin: 1rem;
      float: left;
   }
   .verdel{
+    width: 90%;
     vertical-align: middle;
-    margin: none;
+    margin: 1rem;
     float: left;
   }
   .positie{
-    width: 50%;
+    width: 40%;
   }
   .tpg{
     text-align: center;
