--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -108,7 +108,7 @@
             
         }*/
         header{
-            width: 99%;
+            width: fit-content;
             display: block;
            text-align: center;
         }
@@ -119,7 +119,7 @@
         }*/
         nav{
             text-align: center;
-            width: 99%;
+            width: fit-content;
             display: block;
         }
            
@@ -146,7 +146,7 @@
         
          
          .footer{
-            width: 99%;
+            width: fit-content;
             display: inline;
          }
          
