--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -141,13 +141,13 @@
             }
          
         img{
-            width: fit-content;
+            width: 80%;
     }
         
          
          .footer{
             width: fit-content;
-            display: inline;
+            
          }
          
          
