--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -135,11 +135,12 @@
         }
         .col-3{
             width: 100%;
-        
+            display: block;
         
         }
         .col-7{
             width: 100%;
+            display: block;
             }
          
         img{
