--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -130,16 +130,16 @@
         }
 
         .col-12{
-            width: fit-content;
+        max-width: 100%;
             display: block;
         }
         .col-3{
-            width: 100%;
+            
             display: block;
         
         }
         .col-7{
-            width: 100%;
+            
             display: block;
             }
          
