--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -109,7 +109,7 @@
         }*/
         header{
             width: 100%;
-            
+            margin: none;
            text-align: center;
         }
         /* .nav{
@@ -133,25 +133,15 @@
         max-width: 100%;
             display: inline;
         }
-        .col-3{
-            
-            max-width: fit-content;
-            
-        }
-        .col-7{
-            
-            display: block;
-            }
+       
+        
          
         img{
             width: 90%;
     }
         
          
-         footer{
-            width: 100%;
-            
-         }
+       
          
          
      }
