--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -102,22 +102,14 @@
   
   
      @media all and (max-width: 600px){
-      /*  body{
-            width: 100%;
-            display: block;
-            
-        }*/
+      
         header{
             width: 100%;
             margin: none;
            text-align: center;
         }
-        /* .nav{
-            
-            width: 99%;
-           display: block;
-        }*/
-        nav a{
+        
+        .nav a{
             text-align: center;
             width: fit-content;
             display: block;
@@ -129,10 +121,7 @@
             background-color: yellow ;
         }
 
-        .col-12{
-        max-width: 100%;
-            display: inline;
-        }
+       
        
         
          
