--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -104,7 +104,7 @@
      @media all and (max-width: 600px){
       
         header{
-            width: 100%;
+            
             margin: none;
            text-align: center;
         }
@@ -113,11 +113,13 @@
             text-align: center;
             width: fit-content;
             display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
            
         .kleurregel{
             
-            height: 1px;
+            height: 2px;
             background-color: yellow ;
         }
 
