--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -112,24 +112,28 @@
         .nav {
             text-align: center;
             width: fit-content;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+            
         }
            
         .kleurregel{
-            
-            height: 2px;
-            background-color: yellow ;
+         width: 100%;  
+         height: 3px;
+         background-color: yellow ;
         }
-   .col-12{
-    display: block;
-   }
-     .col-3{
-        display: block;
-     } 
-     .col-7{display: block;
-    } 
+        div{
+            display: block;
+        }
+        .col-12{
+         display: block;
+
+        }
+        .col-3{
+         display: block;
+         width: 100%;
+        } 
+        .col-7{display: block;
+         width: 100%;
+        } 
        
         
          
