--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -104,14 +104,14 @@
      @media all and (max-width: 600px){
       
         .header{
-            width: 100%;
+            
             margin: none;
            text-align: center;
         }
         
         .nav {
             text-align: center;
-            width: fit-content;
+            display: block;
             
         }
            
@@ -123,22 +123,23 @@
         div{
             display: block;
         }
+
         .col-12{
          display: block;
 
         }
         .col-3{
          display: block;
-         width: 100%;
+         
         } 
         .col-7{display: block;
-         width: 100%;
+         
         } 
        
         
          
         img{
-            width: fit-content;
+            width: 90%;
     }
         
          
