--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -120,22 +120,23 @@
         div{
             display: block;
         }
-
+        
         
 
         
         .col-3{
          width: 100%;
-         
+        display: block; 
         } 
         .col-7{
-         width: 99%;
+         width: 100%;
+         display: block;
         } 
        
         
          
         img{
-            width: 90%;
+            width: fit-content;
     }
         
 }     
