--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -108,7 +108,7 @@
         display: block;
      }   
      img{
-        width: fit-content;
+        width: 90%;
      }   
      header{
         text-align: center;
