--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -108,7 +108,7 @@
         display: block;
      }   
      .verspringen{
-        width: 90%;
+        width:auto;
      }   
      header{
         text-align: center;
