--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -108,7 +108,7 @@
         display: block;
      }   
      .verspringen{
-        width: fit-content;
+        width: 80%;
         float: left;
         margin-left: 5px;
      }   
