--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -107,10 +107,10 @@
      .col-12{
         display: block;
      }   
-     .verspringen{
+     img{
         width: 80%;
         float: left;
-        margin-left: 5px;
+        margin-left: 3px;
      }   
      header{
         text-align: center;
