--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -107,10 +107,11 @@
      .col-12{
         display: block;
      }   
-     img{
-        width: 80%;
+     .img{
+        width: 90%;
+        height: auto;
         float: left;
-        margin-left: 3px;
+       
      }   
      header{
         text-align: center;
