--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -108,10 +108,10 @@
         display: block;
      }   
      .img{
-        width: 90%;
+        width: fit-content;
         
         float: left;
-        margin-left: 2px;
+        margin-left: 1px;
      }   
      header{
         text-align: center;
