--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -113,8 +113,12 @@
         float: left;
         margin-left: 1px;
      }   
-     header{
+     h1{
         text-align: center;
+     }
+     a{
+        display: block;
+        
      }
 }     
        
