--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -113,17 +113,20 @@
         float: left;
         margin-left: 1px;
      }   
-     .header{
+     header{
         text-align: center;
         padding-left: 1px;
         padding-right: 1px;
      }
      a{
         display: block;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
         
      }
      .size{
-     width: 90%;
+     width: 95%;
      padding-left: 0px;
      float: left;
      margin-left: 1px;
