--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -121,15 +121,16 @@
      a{
         display: block;
         text-align: center;
-        margin-left: auto;
-        margin-right: auto;
+        width: 100%;
+        
         
      }
      .size{
-     width: 95%;
+     width: 100%;
      padding-left: 0px;
      float: left;
      margin-left: 1px;
+     margin-right: 1px;
      }
   }     
          
