--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -122,6 +122,8 @@
         display: block;
         text-align: center;
         width: 100%;
+        padding-left: auto;
+        padding: auto;
         
         
      }
