--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -108,7 +108,7 @@
         display: block;
      }   
      .img{
-        width: 90%;
+        width: 95%;
         padding-left: 0px;
         float: left;
         margin-left: 1px;
@@ -122,8 +122,8 @@
         display: block;
         text-align: center;
         width: 100%;
-        padding-left: auto;
-        padding: auto;
+        padding-left: 100%;
+        padding-right: 100%;
         
         
      }
@@ -134,6 +134,10 @@
      margin-left: 1px;
      margin-right: 1px;
      }
+.blok2{
+    margin-right: 3px;
+}
+
   }     
          
          
