--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -122,8 +122,8 @@
         display: block;
         text-align: center;
         width: 100%;
-        padding-left: 100%;
-        padding-right: 100%;
+        margin-left: 1px;
+        margin-right: 1px;
         
         
      }
