--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -136,8 +136,8 @@
         ul {
             list-style-type: none;
             margin: 0;
-            padding: 0;
-            width: 100%;
+            padding: 50px 0px;
+            
           }
         li a {
 
