--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -132,10 +132,11 @@
      }
    /*  a{
         display:block;
+        padding-top: 3px;
+        padding-bottom: 3px;
         
-        
-        padding-left: 1px;
-        padding-right: 1px;
+        padding-left: 150px;
+        padding-right: 150px;
         }*/
         ul {
             list-style-type: none;
@@ -143,7 +144,7 @@
             
             
           }
-        li a {
+        li {
 
             display: block;
             padding-left: 150px;
@@ -152,6 +153,7 @@
             padding-bottom: 3px;
             text-align: center;
           }
+
      .kleurregel{
         height: 83px;
      }     
