--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -147,8 +147,8 @@
         li {
 
             display: block;
-            padding-left: 100px;
-            padding-right: 100px;
+            padding-left: 80px;
+            padding-right: 80px;
             padding-top: 0px;
             padding-bottom: 0px;
             text-align: center;
@@ -158,7 +158,9 @@
         height: 3px;
 
      } 
-
+  .container{
+    padding-top: 10px;
+  }
           
      .size
      {
