--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -147,8 +147,8 @@
         li {
 
             display: block;
-            padding-left: 70px;
-            padding-right: 70px;
+            padding-left: 50px;
+            padding-right: 50px;
             padding-top: 0px;
             padding-bottom: 0px;
             text-align: center;
@@ -158,9 +158,10 @@
         height: 2px;
 
      } 
-  .container{
-    padding-top: 20px;
-  }
+.col-3{
+    padding-top: 10px;
+}
+    
           
      .size
      {
