--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -152,8 +152,8 @@
      .kleurregel{
         height: 1px;
       } 
-       .col-3{
-        padding-top: 10px;
+       .tvbl{padding-top: 10px;
+        
        }
     
           
