--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -124,7 +124,14 @@
         padding-left: 0px;
         float: left;
         margin-left: 1px;
-     }   
+     } 
+     .img2{
+        width: 50%;
+        padding-left: 0px;
+        float: left;
+        margin-left: 1px;
+     } 
+
      header{
         text-align: center;
         padding-left: 1px;
@@ -144,7 +151,7 @@
 
             display: block;
             padding-left: 0px;
-            padding-right: 1px;
+            padding-right: 4px;
             text-align: center;
             
           }
