--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -148,7 +148,7 @@
             
           }
         li {
-
+            width: 90%;
             display: block;
             padding-left: 0px;
             padding-right: 4px;
@@ -175,6 +175,9 @@
 
 .blok2{
     margin-right: 3px;
+}
+.positie{
+    float: right;
 }
 
   }     
