--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -167,7 +167,7 @@
 
      .kleurregel{
         height: 1px;
-        margin-bottom: auto;
+        margin-bottom: -20px;
       } 
        .tvbl{padding-top: 30px;
         
