--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -124,12 +124,14 @@
         padding-left: 0px;
         float: left;
         margin-left: 1px;
+        padding-bottom: 10px;
      } 
      .img2{
         width: 50%;
         padding-left: 3px;
         padding-bottom: 8px;
         float: left;
+        padding-right: 45%;
         margin-left: 1px;
         display: inline;
      }
@@ -168,7 +170,7 @@
 
      .kleurregel{
         height: 1px;
-        margin-bottom: -20px;
+        margin-bottom: -30px;
       } 
        .tvbl{padding-top: 30px;
         
@@ -190,7 +192,7 @@
 .positie{
     float: right;
 }
-p a {
+p a{
     font-size: 1rem;
 }
 
