--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -193,9 +193,14 @@
     float: right;
 }
 p a{
-    font-size: 1rem;
+    font-size: 0.5rem;
 }
-
+h1{
+    font-size: 90%;
+}
+h2{
+    font-size: 90%;
+}
   }     
          
          
