--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -129,7 +129,7 @@
      .img2{
         width: 50%;
         padding-left: 3px;
-        padding-bottom: 8px;
+        padding-bottom: 12px;
         float: left;
         padding-right: 45%;
         margin-left: 1px;
@@ -193,13 +193,13 @@
     float: right;
 }
 p a{
-    font-size: 0.5rem;
+    font-size: 8px;
 }
-h1{
-    font-size: 60%;
+h1{ font-size:80%;
+
 }
 h2{
-    font-size: 60%;
+    font-size: 80%;
 }
   }     
          
