--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -129,7 +129,8 @@
      .img2{
         width: 50%;
         padding-left: 3px;
-        padding-bottom: 12px;
+        padding-bottom: 16px;
+        padding-top: 16px;
         float: left;
         padding-right: 45%;
         margin-left: 1px;
@@ -171,7 +172,7 @@
 
      .kleurregel{
         height: 1px;
-        margin-bottom: 0px;
+        padding-bottom: -8px;
       } 
        .tvbl{
         padding-top: 38px;
