--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -178,7 +178,7 @@
       } 
        .tvbl{
         padding-top: 30px;
-        margin-top: -20;
+        margin-top: -20px;
         }
     
           
