--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -189,8 +189,8 @@
      float: left;
      margin-left: 1px;
      margin-right: 1px;
-     padding-top: 10px;
-     padding-bottom: 10px;
+     margin-top: 10px;
+     margin-bottom: 10px;
      }
 
 .blok2{
