--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -181,7 +181,7 @@
        .tvbl{
 
         padding-top: 30px;
-        margin-top: -4px;
+        margin-top: -3px;
         }
     
           
@@ -214,7 +214,9 @@ p{
 h2{
     font-size: 23px;
 }
-
+.beperkt{
+    display: flex;
+}
 
 
 
