--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -181,19 +181,18 @@
        .tvbl{
 
         padding-top: 30px;
-        margin-top: -3px;
+        margin-top: -2px;
         }
     
           
      .size
      {
      width: 100%;
-     padding-left: 0px;
      float: left;
      margin-left: 1px;
      margin-right: 1px;
-     margin-top: 10px;
-     margin-bottom: 10px;
+    /* margin-top: 10px;
+     margin-bottom: 10px;*/
      }
 
 .blok2{
@@ -217,6 +216,7 @@ h2{
 .beperkt{
     display: flex;
 }
+
 
 
 
