--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -192,8 +192,9 @@
      margin-left: 1px;
      margin-right: 1px;
      background-color:rgb(250, 175, 125);
-    /* margin-top: 10px;
-     margin-bottom: 10px;*/
+     margin-top: 10px;
+     margin-bottom: 10px;
+     padding: 10px 2px;
      }
 
 .blok2{
