--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -191,10 +191,15 @@
      float: left;
      margin-left: 1px;
      margin-right: 1px;
-     background-color:rgb(250, 175, 125);
-     margin-top: 10px;
-     margin-bottom: 10px;
-     padding: 10px 2px;
+     
+    
+     
+     }
+     .beperkt{
+        width: 100%;
+        background-color:rgb(250, 175, 125);
+         margin-top: 10px;
+         margin-bottom: 25px;
      }
 
 .blok2{
