--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -191,15 +191,15 @@
      float: left;
      margin-left: 1px;
      margin-right: 1px;
-     
+     margin-top: 10px;
+     margin-bottom: 25px;
     
      
      }
      .beperkt{
         width: 100%;
         background-color:rgb(250, 175, 125);
-         margin-top: 10px;
-         margin-bottom: 25px;
+        padding: auto;
      }
 
 .blok2{
