--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -196,18 +196,20 @@
     
      
      }
-     .beperkt{
-        width: 100%;
-        background-color:rgb(250, 175, 125);
-        padding-bottom: 25px;
-        
-     }
+     
+     
+    .col-3{
+    background-color:rgb(250, 175, 125);
+    width: fit-content;
+    
+    }
 
-.blok2{
+
+    .blok2{
     margin-right: 1px;
     margin-left: 1px;
-}
-.positie{
+    }
+    .positie{
     float: right;
 }
  a{
@@ -223,10 +225,7 @@ h2{
     font-size: 23px;
 }
 
-.col-3{
-    padding-bottom:25px;
-    margin-bottom: 25px;
-}
+
 
 
 
