--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -188,17 +188,16 @@
      .size
      {
      width: 100%;
+     
      float: left;
      margin-left: 1px;
      margin-right: 1px;
-     
-    
-     
      }
      .col-3{
     background-color:rgb(250, 175, 125);
     margin-bottom: 25px;
-    
+    height: auto;
+    width: 100%;
     }
 
 
