--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -199,7 +199,9 @@
     height: auto;
     width: 100%;
     }
-
+     .beperkt{
+        display: block;
+     }
 
    /* .blok2{
     margin-right: 1px;
