--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -194,19 +194,21 @@
      margin-right: 1px;
      }
      .col-3{
-    background-color:rgb(250, 175, 125);
+    
     margin-bottom: 25px;
     height: auto;
-    width: 100%;
+    
     }
      .beperkt{
         display: block;
+        background-color:rgb(250, 175, 125);
      }
 
-   /* .blok2{
+    .blok2{
     margin-right: 1px;
     margin-left: 1px;
-    }     */
+    }     
+
     .positie{
     float: right;
 }
