--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -187,8 +187,8 @@
           
      .size
      {
-     width: 100%;
      
+     width: 100%;
      float: left;
      margin-left: 1px;
      margin-right: 1px;
@@ -196,17 +196,18 @@
      .col-3{
     
     margin-bottom: 25px;
+    padding-bottom: 25px;
     height: auto;
-    
     }
      .beperkt{
-        display: block;
+        display: inline-block;
         background-color:rgb(250, 175, 125);
+
      }
 
     .blok2{
-    margin-right: 1px;
-    margin-left: 1px;
+    margin-right: 2px;
+    margin-left: 0px;
     }     
 
     .positie{
