--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -190,7 +190,7 @@
      
      width: 100%;
      float: left;
-     margin-left: 1px;
+     margin-left: 2px;
      margin-right: 1px;
      }
      .col-3{
@@ -201,14 +201,19 @@
     }
      .beperkt{
         display: inline-block;
-        background-color:rgb(250, 175, 125);
+
+      /*  background-color:rgb(250, 175, 125); */
 
      }
 
     .blok2{
     margin-right: 2px;
-    margin-left: 0px;
-    }     
+    margin-left: -1px;
+    }
+     .blok3{
+     margin-right: 2px;
+
+     }    
 
     .positie{
     float: right;
