--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -146,32 +146,24 @@
         margin-left: 1px;
     
      }
-
-
-     header{
+      header{
         text-align: center;
         padding-left: 1px;
         padding-right: 1px;
      }
-
-     
-        
-        
-        ul {
-            list-style-type: none;
-            margin: 0;
-            
-            
-          }
-        li {
-            width: 90%;
-            display: block;
-            padding-left: 0px;
-            padding-right: 4px;
-            text-align: center;
-            padding-top: 7px;
-            padding-bottom: 7px;
-          }
+    ul {
+        list-style-type: none;
+        margin: 0;
+        }
+    li {
+        width: 90%;
+        display: block;
+        padding-left: 0px;
+        padding-right: 4px;
+        text-align: center;
+        padding-top: 7px;
+        padding-bottom: 7px;
+     }
 
      .kleurregel{
         height: 0.5px;
@@ -183,17 +175,14 @@
         padding-top: 30px;
         margin-top: -2px;
         }
-    
-          
-     .size
+    .size
      {
-     
      width: 100%;
      float: left;
      margin-left: 4px;
-    
-     }
-     .col-3{
+    }
+     .col-3
+     {
     margin-left: 0px;
     margin-bottom: 25px;
     padding-bottom: 25px;
@@ -205,7 +194,7 @@
 
     .blok2{
     margin-right: 8px;
-    margin-left: -4px;
+    margin-left: -6px;
     }
      .blok3{
      margin-right: 12px;
