--- a/Muziekschool/css/style.css
+++ b/Muziekschool/css/style.css
@@ -82,6 +82,9 @@
         padding-bottom: 30px;
 
     }
+    .blok3{
+        padding-left: 25px;
+    }
     h1{
         font-size: 3rem;
     }
@@ -220,7 +223,7 @@ h2{
     padding-bottom: 25px;
 }
   }     
- @media  (min-width: 768px){
+ @media (min-width: 768px){
     
     .col-1 {width: 8.33%;}
     .col-2 {width: 16.66%;}
