--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -114,6 +114,9 @@
     padding: 10px;
     font-style: oblique;
     text-shadow: 0px 0px 4px rgb(255, 255, 255);
+    margin-left: 20px;
+    border-color: blue;
+    
 }
 
 
