--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -135,6 +135,7 @@ h1{
 }
 .card {
     height: 100%;
+    margin-top: 18px;
 }
 .spac{
     margin-top: 2%;
@@ -144,6 +145,9 @@ h1{
     top: 0.5rem;
     left: 47.5rem;
     clear: both;
+    }
+    .accordion-body{
+        color: rgb(255, 0, 0);
     }
 /* page 3*/
  .xxx{
