--- a/Louis/css/style.css
+++ b/Louis/css/style.css
@@ -11,9 +11,9 @@ img{
   .afb{
   width: auto;
   height: 10rem;
-  float: right;
-  margin-right: 200px;
-  margin-left: 1px;
+  
+ margin-right: 1px;
+  
 }
 header{
   text-align: center;
@@ -21,7 +21,7 @@ header{
 }
 h1{
   display: inline;
-  margin-right: -220px;
+  text-align: center;
   filter: drop-shadow( 0px 0px 20px greenyellow); 
 
 font-size: 5rem;
@@ -31,19 +31,26 @@ text-shadow: 2px 2px 4px black;
 
 
 .txt{
-  font-size: 30px;
+  font-size: 28px;
   text-align: center;  
-  color: greenyellow;
-  text-shadow: 3px 3px 6px black;
-  background-color: darkgrey;
+  color: rgb(57, 63, 48);
+  
+  /*background-color: darkgrey;*/
   vertical-align: middle;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 20%;
+  margin-right: 20%;
+  
+}
+a:hover{
+  color: red;
+  font-size: 28px;
 }
 
 
 @media  only screen and (min-width: 600px) {
-  
+    .txte{
+      font-size: 22;
+    }
 }
 .txtx{
   text-align: center;
@@ -53,43 +60,18 @@ text-shadow: 2px 2px 4px black;
 
 
 .txte{
-  font-size: 30px;
+  font-size: 28px;
   color: rgb(114, 148, 115);
   text-shadow: 0px 0px 1px rgba(159, 250, 140, 0);
+  
   }
-  .plaats{
-    vertical-align: middle;
-    display: inline;
-    width: 80%;
-  }
+div{
+  text-align: center;
+  vertical-align: middle;
+}  
+   
  
   
    
  
-  .breedte1{
-  width: 42%;
-  margin-left: 250px;
-  margin-right: -100px;  
-}  
-.breedte2{
-  width: 42%;
-  margin-right: -50px;
-  
-  }
-.breedte3{
-  width: 42%; 
- margin-left: -150px;
-margin-right: -80px;
-}
-.breedte4{
-  
-  width: 42%;
-  height: auto;
-  margin-right: 350px;
-  margin-bottom: 130px;
-  margin-left: -220px;
-}
-a:hover{
-  color: rgb(206, 0, 0);
-  font-size: 31px;
-}
+ 
